# tdjson

./: .gitattributes  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_wheels.yml
.github/workflows/scripts/: before-all-linux-64.sh
examples/: tdjson_example.py
tdjson/: __init__.py  _version.py
