[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=2.2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "tdjson"
dynamic = ["version"]
description = "A high-performance Python binding for TDLib, outperforming ctypes and bundling pre-built binaries for effortless setup on Linux and Windows"
readme = "README.md"
authors = [{ name = "AYMEN", email = "let.me.code.safe@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = [
    "tdlib",
    "telegram",
    "python-binding",
    "high-performance",
    "linux",
    "windows",
]

[project.urls]
Source = "https://github.com/AYMENJD/tdjson"
Tracker = "https://github.com/AYMENJD/tdjson/issues"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "tdjson/_version.py"

[tool.cibuildwheel]
build-verbosity = 1
build = "cp39* cp310* cp311* cp312* cp313*"
enable = ["cpython-freethreading"]
skip = "*musllinux*"
archs = ["native"]

[tool.cibuildwheel.linux]
before-all = ".github/workflows/scripts/before-all-linux-64.sh"
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
